--- a/formulario.html
+++ b/formulario.html
@@ -6,33 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
-<link rel="stylesheet" href="formulario.css">
+<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <main>
-        <form>
-            <div>
+    <main class="container">
+        <form class="formulario">
+            <div class="campo-form">
                 <label for="nome">Nome</label>
                 <input type="text" id="nome" name="nome">
             </div>
-            <div>
+            <div class="campo-form">
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email">
             </div>
-            <div>
+            <div class="campo-form">
                 <label for="tel">Telefone</label>
                 <input type="tel" id="tel" name="tel">
             </div>
-            <div>
+            <div class="campo-form">
                 <label for="nascimento">Data de Nascimento</label>
                 <input type="date" id="nascimento" name="nascimento">
             </div>
-            <div>
+            <div class="campo-form">
                     <label for="curriculo">Currículo</label>
                     <input type="file" id="curriculo" name="curriculo">
             </div>
-            <div>
+            <div class="campo-form">
                 <p>Sexo</p>
                 <label for="masculino">
                     <input type="radio" name="sexo" id="masculino" value="masculino">
@@ -43,7 +43,7 @@
                     <span>Feminino</span>
                 </label>
             </div>
-            <div>
+            <div class="campo-form">
                     <p>Cursos</p>
                     <label for="adm">
                         <input type="checkbox" name="adm" id="adm" value="adm">
@@ -61,8 +61,8 @@
                         <input type="checkbox" name="med" id="med" value="med">
                         <span>Medicina</span>
                     </label>
-                    
             </div>
+            <button class="form-button">Enviar</button>
         </form>
     </main>
 
